--- a/StoreManagement/StoreManagement.csproj
+++ b/StoreManagement/StoreManagement.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Models\Pages\Promotion\" />
     <Folder Include="wwwroot\uploads\" />
   </ItemGroup>
 
