--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "StoreManagement": "Server=THANKS;Database=StoreManagement;Trusted_Connection=True;TrustServerCertificate=True"
+    "StoreManagement": "Server=TAKUN\\SQLEXPRESS;Database=store_management;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "VnPay": {
     "TmnCode": "MFRTXZRG",
